pkl-core/src/test/files/LanguageSnippetTests/input/errors/parser12.pkl
res1 = new { foo = 42 }}